# be/code/application/api/src/main/java/org/theoriok/inventory/command/DeleteCap.java
@@ -1,7 +1,9 @@
 package org.theoriok.inventory.command;
 
+import org.theoriok.inventory.CapId;
+
 public interface DeleteCap {
-    Result delete(String businessId);
+    Result delete(CapId id);
 
     enum Result {
         DELETED,
