# be/code/application/api/src/main/java/org/theoriok/inventory/query/FindCaps.java
@@ -1,5 +1,6 @@
 package org.theoriok.inventory.query;
 
+import org.theoriok.inventory.CapId;
 import org.theoriok.inventory.domain.Cap;
 
 import java.util.List;
@@ -8,7 +9,7 @@ import java.util.Optional;
 public interface FindCaps {
     List<Cap> findAll(Request request);
 
-    Optional<Cap> findById(String businessId);
+    Optional<Cap> findById(CapId id);
 
     record Request(String country) {
     }
