# be/code/infrastructure/outbound/postgres/src/main/java/org/theoriok/inventory/persistence/repositories/CapRepository.java
@@ -5,13 +5,10 @@ import org.springframework.stereotype.Repository;
 import org.theoriok.inventory.persistence.entities.CapEntity;
 
 import java.util.Collection;
-import java.util.Optional;
 import java.util.UUID;
 
 @Repository
 public interface CapRepository extends JpaRepository<CapEntity, UUID> {
-    Optional<CapEntity> findByBusinessId(String businessId);
-
     @SuppressWarnings("PMD.MethodNamingConventions")
     Collection<CapEntity> findAllByCountry_code(String country);
 }
